demo1/elk/php/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-demo
  namespace: elk
spec:
  selector:
    project: www
    k8s-app: php-demo
  ports:
  - name: web
    port: 80
    targetPort: 80
#  type: NodePort
